[package]
name = "rgit"
description = "A gitweb/cgit-like interface"
version = "0.1.5"
edition = "2024"
authors = ["Jordan Doyle <jordan@doyle.la>"]
license = "WTFPL"

[workspace]
members = ["tree-sitter-grammar-repository"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
askama = { version = "0.13.0", default-features = false, features = [
  "derive",
  "std",
] }
axum = { version = "0.8", default-features = false, features = [
  "query",
  "tokio",
  "http1",
] }
axum-extra = { version = "0.10", default-features = false }
basic-toml = "0.1"
bytes = "1.5"
clap = { version = "4.5.37", default-features = false, features = [
  "std",
  "cargo",
  "derive",
  "help",
  "usage",
] }
comrak = { version = "0.38.0", default-features = false }
const-hex = "1.14"
const_format = "0.2"
flate2 = "1.0"
futures-util = "0.3"
gix = { version = "0.71", default-features = false, features = [
  "tracing",
  "parallel",
  "blob-diff",
  "revision",
] }
hashbrown = { version = "0.14", default-features = false, features = [
  "serde",
  "ahash",
] }
httparse = "1.10"
humantime = "2.2"
itertools = "0.14.0"
md5 = "0.7"
memchr = "2.7"
moka = { version = "0.12.10", features = ["future"] }
path-clean = "1.0.1"
rand = "0.8.5"
rkyv = { version = "0.8", features = [
  "bytecheck",
  "alloc",
], default-features = false }
rocksdb = { version = "0.23", default-features = false, features = ["snappy"] }
serde = { version = "1.0", features = ["derive", "rc"] }
simdutf8 = "0.1.5"
tar = { version = "0.4", default-features = false }
time = { version = "0.3", features = ["serde", "formatting"] }
timeago = { version = "0.4.2", default-features = false }
tokio = { version = "1.44", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "smallvec",
  "parking_lot",
  "fmt",
] }
tree-sitter-grammar-repository = { path = "./tree-sitter-grammar-repository" }
tree-sitter-highlight = "0.24"
unix_mode = "0.1"
uuid = { version = "1.11", features = ["v4"] }
v_htmlescape = { version = "0.15", features = ["bytes-buf"] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh3", "xxh3"] }
yoke = { version = "0.7.5", features = ["derive"] }

[features]
zlib-ng = ["flate2/zlib-ng", "gix/zlib-ng"]

[build-dependencies]
anyhow = "1.0"
rsass = "0.28.0"

[package.metadata.deb]
section = "web"
