[package]
name = "tree-sitter-grammar-repository"
description = "tree-sitter grammars built from Helix with support for dynamic linking"
version = "0.0.1"
edition = "2021"
authors = ["Jordan Doyle <jordan@doyle.la>"]
license = "WTFPL"

[dependencies]
globset = "0.4"
regex = "1.11"
tree-sitter-language = "0.1"

[build-dependencies]
anyhow = "1.0"
cc = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
threadpool = "1.8"
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2"
heck = "0.5"
syn = "2.0"
regex = "1.11"
